--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -2,8 +2,9 @@
 
 .layout-workspace {
     width: 100%;
+    padding-bottom: 50px;
     height: 90vh;
-    background-color: #666;
+    background: #4b0bcc;
 
     .content-box {
         padding: 10px 20px;
@@ -33,9 +34,8 @@
 
     .card-container{
         width: 100%;
-        background-color: #4b0bcc;
         color: white;
-        padding: 20px;
+        padding: 0px 20px;
         .card {
             width: 100%;
 
@@ -43,7 +43,9 @@
                 position: absolute; 
                 bottom: 0px; 
                 padding: 10px;
-                background: rgb(28, 29, 39);
+                background: rgba(0, 0, 0, 0.185);
+                box-shadow: 1px 1px 8px #222;
+
                 width: 95%;
 
                 .card-heading {
@@ -52,7 +54,6 @@
 
                     h3 {
                         color: #cff;
-                        font-size: large;
                     }
 
                     p{
@@ -62,11 +63,40 @@
                 }
         
                 .vanue {
-                    background-color: rgb(125, 149, 177);
-                    padding: 5px;
+                    padding: 2px 10px;
+                    display: flex;
                     h6 {
                         text-align: center;
                         font-size: 18px;
+                    }
+                    ul {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                    }
+                }
+
+                .affinity {
+                    background-color: rgb(255, 72, 0);
+                    padding: 10px;
+                    margin: 10px 0px;
+                    border-radius: 10px;
+                    h6 {
+                        font-size: 18px;
+                        margin: 0;
+                        padding: 0;
+                        color: rgb(0, 0, 0);
+                    }
+                    .field {
+                        h5{
+
+                            span{
+                                font-size: 20px;
+                                color: #030e3f;
+                            }
+                            color: rgb(0, 0, 0);
+                        }
                     }
                 }
             }
