--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
+.layout-container {
+  background-image: radial-gradient(#fff, rgb(212, 13, 230));
+}
+
 .layout-workspace {
     width: 100%;
     padding-bottom: 50px;
-    background: radial-gradient(#fff, rgb(212, 13, 230));
 
     .content-box {
         padding: 10px 20px;
@@ -35,76 +38,7 @@
         width: 100%;
         color: white;
         padding: 0px 20px;
-        .card {
-            width: 100%;
-
-            .inner-card {
-                position: absolute; 
-                bottom: 0px; 
-                border-radius: 50px;
-                padding: 20px;
-                background: rgba(2, 6, 253, 0.514);
-                box-shadow: 1px 1px 8px #222;
-                width: 95%;
-                transition: all 0.3s;
-
-                .card-heading {
-                    display: flex;
-                    justify-content: space-between;
-
-                    h3 {
-                        color: #cff;
-                    }
-
-                    p{
-                        font-size: large;
-                        color: #12df90;
-                    }
-                }
         
-                .vanue {
-                    padding: 2px 10px;
-                    display: flex;
-                    h6 {
-                        text-align: center;
-                        font-size: 18px;
-                    }
-                    ul {
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-                        align-items: center;
-                    }
-                }
-
-                .affinity {
-                    background-color: rgb(255, 72, 0);
-                    padding: 10px;
-                    margin: 10px 0px;
-                    border-radius: 10px;
-                    h6 {
-                        font-size: 18px;
-                        margin: 0;
-                        padding: 0;
-                        color: rgb(0, 0, 0);
-                    }
-                    .field {
-                        h5{
-
-                            span{
-                                font-size: 20px;
-                                color: #030e3f;
-                            }
-                            color: rgb(0, 0, 0);
-                        }
-                    }
-                }
-            }
-
-            .inner-card:hover {
-                transform: scale(1.1)
-            }
-        }
     }
 
 }
