--- a/src/components/cardView/card-scopped.scss
+++ b/src/components/cardView/card-scopped.scss
@@ -9,6 +9,17 @@
     box-shadow: 1px 1px 8px #222;
     width: 95%;
     transition: all 0.3s;
+    cursor: pointer;
+
+    .profile-pic {
+        width: 30%;
+        border-radius: 50%;
+        position: absolute;
+        top:-10%;
+        left: 10%;
+        margin: 0;
+        padding: 0;
+    }
 
     .card-heading {
         display: flex;
@@ -19,7 +30,6 @@
         }
 
         p{
-            font-size: large;
             color: #12df90;
         }
     }
@@ -29,7 +39,7 @@
         display: flex;
         h6 {
             text-align: center;
-            font-size: 18px;
+            font-size: 13px;
         }
         ul {
             display: flex;
@@ -42,20 +52,23 @@
     .affinity {
         background-color: rgb(255, 72, 0);
         padding: 10px;
-        margin: 10px 0px;
+        margin: 6px 0px;
         border-radius: 10px;
         h6 {
-            font-size: 18px;
+            font-size: 12px;
             margin: 0;
             padding: 0;
             color: rgb(0, 0, 0);
         }
         .field {
+            margin-left: 15px;
             h5{
+                font-size: 14px;
+                color: #000958;
 
                 span{
-                    font-size: 20px;
-                    color: #030e3f;
+                    font-size: 16px;
+                    color: #00030e;
                 }
                 color: rgb(0, 0, 0);
             }
@@ -65,6 +78,13 @@
 
   .inner-card:hover {
     transform: scale(1.05);
+    box-shadow: 3px 3px 12px #000;
     background: rgba(2, 6, 253, 0.795);
   }
+}
+
+.card-body{
+    position:relative;
+    width: 100%;
+    top: 30px;
 }
