--- a/src/layout/header/header.scss
+++ b/src/layout/header/header.scss
@@ -5,6 +5,9 @@
             padding: 0;
             color: #fff;
             font-size: 25px;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.514);
+            cursor: pointer;
+            width: fit-content;
         }
         margin: 0;
         padding: 0;
