--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -17,12 +17,14 @@
     }
 
     .summary-container{
-        width: 80%;
-        padding: 20px;
-        background-color: #000;
-        border-radius: 10px;
+        width: 50%;
+        padding: 10px;
+        background-color: rgba(1, 0, 32, 0.678);
+        border-radius: 80px 0px;
         color: #cff;
         margin: 30px auto;
+        text-align: center;
+        box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.836);
 
         h3 {
             color: #fff;
