--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -17,14 +17,13 @@
     }
 
     .summary-container{
-        width: 50%;
-        padding: 10px;
+        padding: 20px;
         background-color: rgba(1, 0, 32, 0.678);
-        border-radius: 80px 0px;
+        border-radius: 40px 0px;
         color: #cff;
-        margin: 30px auto;
         text-align: center;
         box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.836);
+        margin: auto;
 
         h3 {
             color: #fff;
@@ -38,9 +37,10 @@
 
     .card-container{
         width: 100%;
+        max-width: 800px;
         color: white;
         padding: 0px 20px;
-        
+        margin: 0 auto;  
     }
 
 }
