--- a/src/components/cardView/card-scopped.scss
+++ b/src/components/cardView/card-scopped.scss
@@ -34,7 +34,7 @@
         }
     }
 
-    .vanue {
+    .venue {
         padding: 2px 10px;
         display: flex;
         h6 {
@@ -87,4 +87,10 @@
     position:relative;
     width: 100%;
     top: 30px;
+}
+
+.brand_logo {
+    width: 20px;
+    height: 20px;
+    margin: 10px;
 }
