--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -42,5 +42,8 @@
         padding: 0px 20px;
         margin: 0 auto;  
     }
+}
 
+.questionsModal {
+    box-shadow: 2px 2px 12px rgb(75, 71, 71);
 }
