Concert API call Started with concertData Display

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .app-container {
-  background: radial-gradient(#fff, rgb(124, 233, 252));
+  background: #FFF;
   background-position: center;
   background-clip: border-box;
   background-attachment: fixed;
