--- a/src/components/ArtistPieChart/ArtistPieChart.scss
+++ b/src/components/ArtistPieChart/ArtistPieChart.scss
@@ -129,7 +129,7 @@ $artist4-bg : #720D6D;
     width: 55%;
     margin-top: 30%;
     margin-left: 30%;
-    overflow: hidden;
+    // overflow: hidden;
     text-align: center;
 }
 
@@ -138,7 +138,7 @@ $artist4-bg : #720D6D;
     width: 55%;
     margin-top: 30%;
     margin-left: 10%;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .matchcontainer-3 {
@@ -146,7 +146,7 @@ $artist4-bg : #720D6D;
     width: 55%;
     margin-top: 10%;
     margin-left: 10%;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .matchcontainer-4 {
@@ -154,7 +154,7 @@ $artist4-bg : #720D6D;
     width: 55%;
     margin-top: 10%;
     margin-left: 30%;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .flex-match-content {
@@ -211,4 +211,10 @@ img {
 .data-container {
     padding: 5px;
     font-size: 80%;
+}
+
+.close{
+    color: red;
+    font-size: 20px;
+    cursor: pointer;
 }
