Added Concert Data in recommendation pages

--- a/src/components/ArtistPieChart/ArtistPieChart.scss
+++ b/src/components/ArtistPieChart/ArtistPieChart.scss
@@ -214,7 +214,10 @@ img {
 }
 
 .close{
-    color: red;
+    color: rgb(255, 255, 255);
     font-size: 20px;
     cursor: pointer;
+    &:hover {
+        color: #F00;
+    }
 }
