--- a/src/layout/header/header.scss
+++ b/src/layout/header/header.scss
@@ -3,7 +3,7 @@
         h3{
             margin: 0;
             padding: 0;
-            color: #fff;
+            color: rgb(0, 0, 0);
             font-size: 25px;
             text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.514);
             cursor: pointer;
