1: created service to get all concerts created 2: displaying it to dasboard 3: Bud: scrolling issue in concert form modal solved

--- a/src/components/concert/concert.scss
+++ b/src/components/concert/concert.scss
@@ -1,4 +1,8 @@
-.submit {
-  position: inherit;
-  right: 0;
+.concert-container {
+  margin: 0;
+  padding: 10px;
+  .submit {
+    position: inherit;
+    right: 0;
+  }
 }
