Added artists summary

--- a/src/components/submittedCard/submmitedForm.scss
+++ b/src/components/submittedCard/submmitedForm.scss
@@ -1,13 +1,13 @@
 .submmitedFormsCard {
   padding: 20px;
   margin: 20px;
-  background-color: rgba(0, 0, 0, 0.781);
+  background-color: rgba(0, 0, 0, 0.322);
   transition: all 0.2s;
   .displayFlex {
     display: flex;
     justify-content: space-between;
     h3{
-      color: #FFF;
+      color: rgb(0, 0, 0);
     }
     div {
       display: flex;
