--- a/src/components/RecommendationPage/ArtistPieChart/ArtistPieChart.scss
+++ b/src/components/RecommendationPage/ArtistPieChart/ArtistPieChart.scss
@@ -7,7 +7,6 @@ $artist3-bg : #810f7c;
 $artist4-bg : #720D6D;
 
 .container {
-    margin-left: 5px;
     width: 600px;
     height: 600px;
     background-color: $container-bg;
@@ -18,6 +17,7 @@ $artist4-bg : #720D6D;
     border-color: black;
     box-shadow: 1px 1px 12px black;
     text-align: center;
+    margin: auto;
 }
 
 .column {
