UI improved Unwantted branst wantted brands name fixed Dark theam

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 .app-container {
-  background: #FFF;
+  background: rgb(27, 27, 27);
   background-position: center;
   background-clip: border-box;
   background-attachment: fixed;
