--- a/src/components/RecommendationPage/concertData/concertData.scss
+++ b/src/components/RecommendationPage/concertData/concertData.scss
@@ -1,25 +1,25 @@
 .concertDataContainer {
   margin: 5px;
-  background-color: rgb(206, 206, 206);
+  background-color: rgb(19, 23, 34);
   padding: 10px;
   color: #FFF;
 
   h3, h5, h4 {
-    color: rgb(0, 0, 0);
-    text-shadow: 0px 1px 2px rgb(202, 199, 199);
+    color: rgb(231, 228, 228);
+    text-shadow: 0px 1px 2px rgb(0, 0, 0);
   }
 
   h3 {
-    color: rgb(47, 58, 0);
+    color: rgb(231, 228, 228);
     text-shadow: 1px 1px 2px rgb(0, 0, 0);
   }
 
   span {
-    color: rgb(46, 44, 44);
+    color: rgb(231, 228, 228);
   }
 
   .information {
-    background-color: rgba(255, 255, 255, 0.37);
+    border-top: 1px solid rgb(255, 123, 0);
     margin: 2px;
     padding: 2px;
   }
