--- a/src/components/RecommendationPage/recommendationPage.scss
+++ b/src/components/RecommendationPage/recommendationPage.scss
@@ -1,11 +1,17 @@
+
+
 .summary-container {
   margin: 10px;
   padding: 10px 5px;
-
+  h3, h4 {
+    color: #FFF;
+  }
+  
   .summary {
-    padding: 20px 10px;
-    background-color: #ccc;
+    padding: 10px 10px;
+    background-color: rgb(26, 26, 26);
     margin: 10px 0px;
+    border-left: 2px solid rgb(255, 123, 0);
   }
 
 }
