Error code changed to No data found Error page font color changed Unique key prop added to lists item Checkbox added to the concert list

--- a/src/components/ErrorPage/errorPage.scss
+++ b/src/components/ErrorPage/errorPage.scss
@@ -3,10 +3,10 @@
 
   h1 {
     font-size: 45px;
-    color: #444;
+    color: #DDD;
   }
   p {
     font-size: 25px;
-    color: rgb(75, 75, 75);
+    color: #AAA;
   }
 }
