--- a/src/components/RecommendationPage/recommendationPage.scss
+++ b/src/components/RecommendationPage/recommendationPage.scss
@@ -1,7 +1,7 @@
 
 .recommendation-page-header {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 
   Button {
     margin-right: 10px;
