--- a/src/components/dashboard/dashboard.style.scss
+++ b/src/components/dashboard/dashboard.style.scss
@@ -2,12 +2,15 @@
   padding: 5px 20px;
   margin: 10px;
   transition: all 0.2s;
-  width: 90%;
+  width: 98%;
   border-top: 1px solid gray;
   .displayFlex {
     display: flex;
     justify-content: space-between;
     h3{
+      color: rgb(250, 229, 184);
+    }
+    p {
       color: rgb(250, 229, 184);
     }
     div {
@@ -21,14 +24,12 @@
 }
 
 .submmitedFormsCard:hover {
-  transform: scale(1.01);
-  box-shadow: 2px 2px 6px #000;
+  background-color: rgba(0, 0, 0, 0.438);
 }
 
 .headingForms {
   border-top: none;
   &:hover {
-    transform: scale(1);
-    box-shadow: none;
+    background-color: rgba(0, 0, 0, 0);
   }
 }
