--- a/src/components/RecommendationPage/ArtistPieChart/ArtistPieChart.scss
+++ b/src/components/RecommendationPage/ArtistPieChart/ArtistPieChart.scss
@@ -42,6 +42,8 @@ $artist4-data-bg :   #ffd476;
 
 .name {
     text-shadow: 1px 1px 5px #444;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .column {
