Concert Table redesign using antd table Delete Operation Fixed Confirm modal before deleting after delete removing concert.

--- a/src/components/dashboard/dashboard.style.scss
+++ b/src/components/dashboard/dashboard.style.scss
@@ -1,3 +1,8 @@
+.concert-table-container {
+  max-width: 1200px;
+  margin: auto;
+}
+
 .submmitedFormsCard {
   padding: 5px 20px;
   margin: 10px;
