--- a/src/components/RecommendationPage/recommendationPage.scss
+++ b/src/components/RecommendationPage/recommendationPage.scss
@@ -31,6 +31,8 @@ $line-color: #474744;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding: 0px 20px;
+  padding-top: 10px;
 
   Button {
     margin-right: 10px;
