--- a/src/components/RecommendationPage/recommendationPage.scss
+++ b/src/components/RecommendationPage/recommendationPage.scss
@@ -27,6 +27,10 @@ $line-color: #474744;
   }
 }
 
+.recommendation-page {
+  height: 100%;
+}
+
 .recommendation-page-header {
   display: flex;
   justify-content: flex-end;
@@ -45,7 +49,7 @@ $line-color: #474744;
 
 .recommendation-page-body {
   background-image: $line-color;
-  max-height: 84vh;
+  max-height: 90%;
   overflow: auto;
   padding: 30px;
 }
