--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -4,7 +4,7 @@
     height: 100vh;
 
     .layout-body {
-        max-height: 90vh;
+        height: 90%;
         overflow: auto;
         background: rgb(0, 0, 0);
     }
