--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -80,3 +80,11 @@
     max-width: 1200px;
     margin: auto;
 }
+
+.scroll {
+    overflow-x: auto;
+}
+
+.height-100 {
+    height: min-content;
+}
