--- a/src/App.scss
+++ b/src/App.scss
@@ -4,3 +4,94 @@
   background-attachment: fixed;
   min-height: 100vh;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
+.layout-container {
+    height: 100vh;
+
+    .layout-body {
+        height: 90%;
+        overflow: auto;
+        background: rgb(0, 0, 0);
+    }
+}
+
+.layout-workspace {
+    width: 100%;
+    padding-bottom: 50px;
+
+    .content-box {
+        padding: 10px 20px;
+        box-sizing: border-box;
+        min-height: 200px;
+        background-color: #222;
+        color: #fff;
+    }
+
+    .summary-container{
+        padding: 20px;
+        background-color: rgba(1, 0, 32, 0.678);
+        border-radius: 40px 0px;
+        color: #cff;
+        text-align: center;
+        box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.836);
+        margin: auto;
+
+        h3 {
+            color: #fff;
+        }
+
+        p {
+            font-family: 'Indie Flower', cursive;
+            font-size: large;
+        }
+    }
+
+    .card-container{
+        width: 100%;
+        max-width: 800px;
+        color: white;
+        padding: 0px 20px;
+        margin: 0 auto;  
+    }
+}
+
+.questionsModal {
+    box-shadow: 2px 2px 12px rgb(75, 71, 71);
+}
+
+.row-flex {
+    display: flex;
+}
+
+.justify-between {
+    display: flex;
+    justify-content: space-between;
+}
+
+.align-center {
+    display: flex;
+    align-items: center;
+}
+
+.text-size-4 {
+    font-size: 18px;
+}
+
+.text-size-3 {
+    font-size: 22px;
+}
+
+.width-md {
+    max-width: 1200px;
+    margin: auto;
+}
+
+.scroll {
+    overflow-x: auto;
+}
+
+.height-100 {
+    height: min-content;
+}
