--- a/src/visualLayer/containers/RecommendationPage/ArtistPieChart/ArtistPieChart.scss
+++ b/src/visualLayer/containers/RecommendationPage/ArtistPieChart/ArtistPieChart.scss
@@ -52,9 +52,18 @@ $artist4-data-bg :   #ffd476;
     color: #222;
     font-weight: bolder;
     font-size: 18px;
+    margin: 0px 10px;
     span {
         font-size: 24px;
     }
+}
+
+.text-right {
+    text-align: right;
+}
+
+.text-left {
+    text-align: left;
 }
 
 .locations {
@@ -211,7 +220,7 @@ $artist4-data-bg :   #ffd476;
     flex-direction: column;
     font-size: 14px;
     color: whitesmoke;
-    margin-top: 10%;
+    margin-top: 5%;
 }
 
 .circle-img{
@@ -308,9 +317,11 @@ $artist4-data-bg :   #ffd476;
 }
 
 .close{
-    color: rgb(255, 255, 255);
+    color: #222;
     font-size: 20px;
     cursor: pointer;
+    z-index: 1000;
+    width: 100%;
     &:hover {
         color: #F00;
     }
