--- a/src/visualLayer/containers/header/header.scss
+++ b/src/visualLayer/containers/header/header.scss
@@ -1,37 +1,32 @@
 .header-container {
-    nav {
-        h3{
-            margin: 0;
-            padding: 0;
-            color: rgb(253, 250, 250);
-            font-size: 25px;
-            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.514);
-            cursor: pointer;
-            width: fit-content;
-            a{
-                color: #FFF;
-                img {
-                    width: 50px;
-                    height: 50px;
-                    border-radius: 0px;
-                }
-            }
-        }
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 0px;
+    div {
         margin: 0;
         padding: 0;
+        color: rgb(253, 250, 250);
+        font-size: 25px;
+        text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.514);
+        cursor: pointer;
+        width: fit-content;
+        a{
+            color: #FFF;
+            img {
+                width: 50px;
+                height: 50px;
+                border-radius: 0px;
+            }
+        }
     }
-    padding: 0px;
-    margin: 0;
 }
 
 @media  screen and (max-width: 450px) {
     .header-container {
-        nav {
-            h3{
-                width: fit-content;
-                a{
-                    font-size: 16px;
-                }
+        div {
+            width: fit-content;
+            a{
+                font-size: 16px;
             }
         }
     }
