--- a/src/visualLayer/containers/header/header.scss
+++ b/src/visualLayer/containers/header/header.scss
@@ -1,21 +1,30 @@
 .header-container {
-    display: flex;
-    justify-content: space-between;
-    padding: 0px 0px;
-    div {
-        margin: 0;
-        padding: 0;
-        color: rgb(253, 250, 250);
-        font-size: 25px;
-        text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.514);
-        cursor: pointer;
-        width: fit-content;
-        a{
-            color: #FFF;
-            img {
-                width: 50px;
-                height: 50px;
-                border-radius: 0px;
+    box-shadow: 1px -1px 12px rgb(54, 45, 45);
+    .header {
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 0px;
+        .app-logo {
+            .cuttime {
+                text-shadow: 1px 1px 2px rgb(0, 255, 242);
+                font-weight: bold;
+            }
+        }
+        div {
+            margin: 0;
+            padding: 0;
+            color: rgb(253, 250, 250);
+            font-size: 25px;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.514);
+            cursor: pointer;
+            width: fit-content;
+            a{
+                color: #FFF;
+                img {
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 0px;
+                }
             }
         }
     }
