--- a/src/App.scss
+++ b/src/App.scss
@@ -62,6 +62,11 @@
     display: flex;
 }
 
+.column-flex {
+    display: flex;
+    flex-direction: column;
+}
+
 .justify-between {
     display: flex;
     justify-content: space-between;
