--- a/src/visualLayer/components/ArtistProfile/artistprofile.scss
+++ b/src/visualLayer/components/ArtistProfile/artistprofile.scss
@@ -6,6 +6,10 @@
     background-clip: fit;
     position: relative;
   
+    .back-button {
+      position: absolute;
+    }
+
     .profile-pic {
       position: absolute;
       top: 125px;
@@ -23,7 +27,7 @@
 
   .artist-profile-body{
     .artist-profile-overview {
-      max-width: 1200px;
+      max-width: 1000px;
       min-width: 900px;
       margin: 50px auto;
       .fan-container {
