--- a/src/visualLayer/containers/RecommendationPage/cardView/card-scopped.scss
+++ b/src/visualLayer/containers/RecommendationPage/cardView/card-scopped.scss
@@ -4,6 +4,10 @@ $font-color: #000;
   width: 80%;
   transition: all 1s;
   margin-top: 40px;
+  * {
+      color: $font-color;
+  }
+
   .inner-card {
     position: absolute; 
     bottom: 0px; 
@@ -83,7 +87,7 @@ $font-color: #000;
 
   .inner-card:hover {
     transform: scale(1.05);
-    box-shadow: 3px 3px 12px #000;
+    box-shadow: 1px 4px 8px rgba(71, 71, 71, 0.596);
     background: rgba(2, 6, 253, 0.795);
   }
 
@@ -107,4 +111,8 @@ $font-color: #000;
     width: 20px;
     height: 20px;
     margin: 10px;
+}
+
+.font-color {
+    color: $font-color;
 }
