--- a/src/visualLayer/components/ArtistProfile/artistprofile.scss
+++ b/src/visualLayer/components/ArtistProfile/artistprofile.scss
@@ -22,12 +22,15 @@
       position: absolute;
       top: 200px;
       left: 250px;
+      color: rgb(5, 5, 27);
+      text-size-adjust: auto;
+      text-shadow: 1px 1px 3px #FFF, 2px 2px 15px #FFF, 3px 3px 42px rgb(255, 255, 255);
     }
   }
 
   .artist-profile-body{
     max-width: 90%;
-    margin: auto;
+    margin: auto;x
     .artist-profile-overview {
       margin: 50px auto;
       .fan-container {
