added discarded artist in recommendation page

--- a/src/visualLayer/components/ArtistProfile/artistprofile.scss
+++ b/src/visualLayer/components/ArtistProfile/artistprofile.scss
@@ -8,6 +8,8 @@
   
     .back-button {
       position: absolute;
+      color: #000;
+      text-shadow: 1px 1px 5px #FFF;
     }
 
     .profile-pic {
