--- a/src/visualLayer/pages/header/header.scss
+++ b/src/visualLayer/pages/header/header.scss
@@ -30,13 +30,27 @@
     }
 }
 
+#extra {
+    display: none;
+}
+
 @media  screen and (max-width: 450px) {
     .header-container {
         div {
-            width: fit-content;
             a{
                 font-size: 16px;
             }
         }
+    }
+}
+
+@media  screen and (min-width: 1000px) {
+    #hamb {
+        display: none;
+    }
+    #extra {
+        display: flex;
+    justify-content: space-between;
+    align-items: center;
     }
 }
