--- a/src/visualLayer/pages/landing/landing.scss
+++ b/src/visualLayer/pages/landing/landing.scss
@@ -19,8 +19,8 @@
 
     p {
       width: 60%;
-      margin: 20px;
-      padding: 20px;
+      margin: 0px 20px;
+      padding: 5px 20px;
       color: #aaa;
       text-align: center;
       font-size: 18px;
