--- a/src/visualLayer/pages/recommendation/recommendationPage.scss
+++ b/src/visualLayer/pages/recommendation/recommendationPage.scss
@@ -52,7 +52,7 @@ $line-color: #474744;
   height: 95%;
   background-color: #111;
   overflow: auto;
-  padding: 30px;
+  padding: 10px 30px;
 
   .pie-container {
     transform-origin: top;
